Fix split button text alignment in create view (#7494)
Part of #7487

--- a/webviews/createPullRequestViewNew/index.css
+++ b/webviews/createPullRequestViewNew/index.css
@@ -294,3 +294,7 @@ textarea {
 .pre-review svg path {
 	fill: currentColor;
 }
+
+button.split-left {
+	display: block;
+}
